app/src/css/_base.scss
/* ... */
/* general styling shared between versions */
.icon::before {
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.rightalign.nav__order-8 .log-icon {
  margin-right: 0.2em;
  &:before {
    color: $white;
    font-family: "FontAwesome";
    content: "\f2f5";
    font-weight: 900;
  }
}

.content__header {
  background-color: $ocean-blue;
  color: $white;
  padding-top: 2em;
  padding-bottom: 2em;
  box-shadow: $shadow__header;

  h1 {
    margin-bottom: 0.3em;
  }
}

.content__header--lg {
  padding-top: 3em;
}

.heading-form-group--left {
  display: flex;
  flex-direction: row;

  li {
    &:not(:first-child) {
      margin-right: 2em;
    }

    h1 {
      margin-right: 5em;
    }

    a.button {
      display: flex;
    }
  }
}

//Sidebar//

.wrapper__sidebar {
  /*position: relative;*/
  flex-direction: row;
  display: flex;
  width: 100%;
}

.sidebar-toggle--wrapper {
  position: relative;

  &.active {
    flex: 2;
    padding: 0;
    max-width: 225px;
    min-width: 175px;
    min-height: 100vh;
    background-color: $sub-blue;
    color: #e7e4e4;
    margin: 0;

    .sidebar-toggle {
      right: -1em;
    }

    .sidebar {
      display: block;
    }
  }

  .sidebar-toggle {
    position: absolute;
    top: -1em;

    &:hover {
      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.12);
    }
  }
}

.sidebar {
  display: none;

  a {
    color: #e7e4e4;
    border-bottom: none;
    .active {
      color: $white;
      border-bottom: 1px solid #e7e4e4;
    }
    &:hover {
      color: $white;
    }
  }
  .sidebar__nav--back {
    padding-bottom: 1.8em;
    margin-bottom: 1em;
    border-bottom: 1px solid rgba(69, 83, 101, 0.8);
    display: inline-block;
  }
  .sidebar__nav--selected {
    color: #e7e4e4;
    font-weight: $base-font-semibold;
    letter-spacing: 0.2px;
    border-bottom: 2px solid #e7e4e4;
  }
  li {
    margin-bottom: 0.75em;
  }
  li:first-child {
    line-height: 3em;
    font-size: 1.25em;
    font-weight: 400;
  }
  li:nth-child(n + 2) {
    line-height: 2em;
    font-weight: 400;
  }
}

.sidebar:before {
  content: "";
  /*position: absolute;*/
  top: 0;
  bottom: 0;
  /* subtract h2 padding (1.5rem) */
  /*left: -50em;*/
  background: $sub-blue;
  height: 100%;
  /*width: 50em;*/
}

.sidebar__row {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  background-color: $dark-blue;
  padding: 1em 0 1.5em 0;
}

.sidebar__header {
  margin-top: 2em;
  margin-bottom: 1em;
}

.page__content {
  width: 100%;
  @extend .clearfix;

  &--nosidebar {
    margin-top: 2em;
    flex-direction: column;
    padding-bottom: 2em;
  }

  &--shortened {
    flex: 10;
    padding: 2em 4em 2em 4em;
    /*float: left;*/
    width: 80%;

    &--centered {
      width: 70%;
      margin: 0 auto;
      padding-top: 2em;
      padding-bottom: 2em;
    }
  }
}

.page__section {
  @extend .clearfix;
  margin-top: 1em;
  /*&:last-of-type {
  margin-bottom: 3em;
  }*/
}

.page_section__overview {
  margin-top: 25px;
}

.page__section__header-wrapper {
  margin-bottom: 1em;
}

.page__section__header--shared-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.page_section.metrics--overview .heading__wrapper--border {
  margin-top: 0em;
}

/* This is here to control the z-index and position attributes for the react-datetime-picker and react-calendar*/
.page__section#datetime {
  margin-top: 0em;
  margin-bottom: 7.5em;
}

.page__section--logs {
  .heading__wrapper--border {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 0.5em;

    .log-query-items {
      display: flex;
    }
  }

  .dropdown__element {
    width: 80px;
  }

  .search__wrapper {
    input {
      height: 29px;
    }

    .search__icon:after {
      top: 0.85em;
    }
  }
}

.collection__options--top ul {
  display: flex;
  align-items: center;
}

.collection__options--top li:nth-child(2) {
  margin-left: auto;
}

.page__section__controls {
  margin-bottom: 1.5em !important;
}

.page__section--small {
  margin-bottom: 2em;
}

.page__section--top {
  padding: 25px 0 25px 0;
  background-color: #1e6b9d;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.12);
}

.top {
  display: flex;
  justify-content: center;
  align-content: center;
}

.top span {
  font-weight: 700;
}
.page__section.update--granules {
  margin-bottom: 2em;
}

.metadata__updated,
.label__description {
  font-size: 0.79em;
  font-style: italic;
  color: lighten($lighter-grey, 10%);
  dt,
  dd {
    display: inline;
    padding-right: 0.5em;
  }
  .metadata__updated__time {
    margin-left: 0.5em;
    padding-left: 1em;
    border-left: 1px solid lighten($lighter-grey, 20%);
  }
}

.title-count {
  border-bottom: 1px solid $lightest-grey;
  padding-bottom: 1em;
  margin-top: 1.5em;
}

/**************************************************
  Progress Bar
**************************************************/

.progress-bar {
  height: 5px;
  position: relative;
  background: $lightest-grey;
  top: 0.3em;
  width: 98.8%;
}
/* ... */

